--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="project_heading">
               <h1 style="color: black;">Clusterize Learning</h1>
             </div>
-              <p class="project_description">An AI based ed-tech website for the organization clusterize learning. The website includes an AI chatbot for breaking down code into simple fragmented explanations, a quiz bot which asks new questions everytime, inbuilt compiler to run code, hashed login system and more...</p>
+              <p class="project_description">An AI-powered ed-tech website for the organization Clusterize Learning, offering innovative features such as an AI chatbot for simplifying code explanations, a dynamic quiz bot, an inbuilt code compiler, a secure hashed login system, and more.</p>
               <p class="tech-stack">TechStack:  HBS, Javascript,  Node.js, MongoDB, Llama2, gradio, pytorch, hugging-face</p>
               <div class="btnGroup">
                 <a href="https://ayush-dhawan.github.io/iei_webapp/" target="_blank"><button id="demo">Demo</button></a>
