--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="project_heading">
             <h1 style="color: black;">Recipe-CMS</h1>
           </div>
-            <p class="project_description"> Designed a user-friendly CMS for recipe management, including editing and deletion functionalities. Enhanced user experience with profile customization options and ensured cross-device compatibility with a mobile-first design approach.Implemented secure JWT user authentication and authorization.</p>
+            <p class="project_description"> Developed a user-friendly Recipe CMS with editing, deletion, and profile customization. Ensured cross-device compatibility and security with JWT authentication.</p>
             <p class="tech-stack">TechStack: ReactJS, NodeJS, ExpressJS, MongoDB, React Query, TypeScript, Tailwind CSS, Daisy UI 
             </p>
             <div class="btnGroup">
