--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="project_heading">
               <h1 style="color: black;">Resort Ecosystem</h1>
             </div>
-              <p class="project_description">Created a comprehensive resort management system featuring intuitive admin tools, predictive analytics, and a user-friendly interface for guests and restaurant patrons. Powered by a centralized database for seamless operations.</p>
+              <p class="project_description" style="font-size: xx-large;">Created a comprehensive resort management system featuring intuitive admin tools, predictive analytics, and a user-friendly interface for guests and restaurant patrons. Powered by a centralized database for seamless operations.</p>
               <p class="tech-stack">TechStack: ReactJS, React query, Redux, Supabase, Tailwind CSS, SASS, Styled Components, Gsap</p>
               <div class="btnGroup">
                 <a href="https://www.youtube.com/watch?v=Rr3P_WGuLKw" target="_blank"><button style="width: 120px;" id="demo">Whole demo</button></a>
@@ -38,7 +38,7 @@
         <div class="project_heading">
             <h1 style="color: black;">Rapido for the web</h1>
           </div>
-            <p class="project_description">A dynamic cab booking service featuring a live map display of routes from source to destination, showing distance and estimated travel time. Autocomplete to enhance UX Secure donation mechanism included for seamless transactions.</p>
+            <p class="project_description" >A dynamic cab booking service featuring a live map display of routes from source to destination, showing distance and estimated travel time. Autocomplete to enhance UX Secure donation mechanism included for seamless transactions.</p>
             <p class="tech-stack">TechStack:  NextJS 14, Clerk auth, Typescript, Tailwind CSS, Stripe, MapBox, React-map-gl</p>
             <div class="btnGroup">
               <a href="https://www.youtube.com/watch?v=FUF-cgRUci8" target="_blank"><button  id="demo">Demo</button></a>
