--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </div>
     
     <div  style="font-family: 'Bebas Neue', sans-serif;" class="parallax_group outro_screen" id="outro">
-      Testimonials
+      Check my <a style="text-decoration: none;" href="https://github.com/Ayush-Dhawan" target="_blank"><span style="color: black; cursor: pointer;">Github</span></a> & <a style="text-decoration: none;" href="https://www.linkedin.com/in/ayush-dhawan-733b34253/" target="_blank"><span style="color: rgb(44, 141, 233); cursor: pointer;">Linkedin</span></a> for all source code and more projects!
     </div>
   </div>
 
