--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
               <p class="project_description" style="font-size: xx-large;">Created a comprehensive resort management system featuring intuitive admin tools, predictive analytics, and a user-friendly interface for guests and restaurant patrons. Powered by a centralized database for seamless operations.</p>
               <p class="tech-stack">TechStack: ReactJS, React query, Redux, Supabase, Tailwind CSS, SASS, Styled Components, Gsap</p>
               <div class="btnGroup">
-                <a href="https://www.youtube.com/watch?v=Rr3P_WGuLKw" target="_blank"><button style="width: 120px;" id="demo">Whole demo</button></a>
-                <a href="#" target="_blank"><button id="code">Client side demo</button></a> 
+                <a href="https://youtu.be/qm-39PlPDo4" target="_blank"><button style="width: 120px;" id="demo">Whole demo</button></a>
+                <a href="https://youtu.be/qm-39PlPDo4" target="_blank"><button id="code">Client side demo</button></a> 
               </div>
           </div>
 
@@ -211,8 +211,8 @@
               <p style="font-size: x-large; margin-top: 0.1rem;" class="project_description_small">Created a comprehensive resort management system featuring intuitive admin tools, predictive analytics, and a user-friendly interface for guests and restaurant patrons. Powered by a centralized database for seamless operations.</p>
               <p class="tech-stack">TechStack: ReactJS, React query, Redux, Supabase, Tailwind CSS, SASS, Styled Components, Gsap</p>
                 <div class="btnGroup">
-                  <a href="https://www.youtube.com/watch?v=Rr3P_WGuLKw" target="_blank"><button style="width: 120px;" id="demo">Whole demo</button></a>
-                <a href="#" target="_blank"><button id="code">Client side demo</button></a> 
+                  <a href="https://youtu.be/qm-39PlPDo4" target="_blank"><button style="width: 120px;" id="demo">Whole demo</button></a>
+                <a href="https://youtu.be/qm-39PlPDo4" target="_blank"><button id="code">Client side demo</button></a> 
                 </div>
             </div>
         </center>
